# TP_8INF867

./: TP1.py  TP1_2.py  TP1_3.py  TP1_v2.py  TP4.ipynb  pyproject.toml
