[tool.poetry]
name = "tp-intro-ia"
version = "0.1.0"
description = "Projet pour tout TP dans le cour Introduction à l'IA (UQAC)"
authors = ["BenoitFaureIMT <benoit.faure@mines-ales.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.26.0"
scipy = "^1.11.2"
pandas = "^2.1.1"
scikit-learn = "^1.3.0"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
